fix(bootstrap4-theme): hero alignment issues

--- a/packages/bootstrap4-theme/src/scss/extends/_heroes.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_heroes.scss
@@ -69,17 +69,17 @@ div[class^='uds-hero'] {
     display: inline-block;
     grid-row: 2;
     line-height: 1;
-
     .highlight-white {
       @include like-h3-highlight-white;
     }
-
     .highlight-black {
       @include like-h3-highlight-black;
     }
-
     .highlight-gold {
       @include like-h3-highlight-gold;
+    }
+    span {
+      margin-left: 0.15em;
     }
   }
 
@@ -87,6 +87,9 @@ div[class^='uds-hero'] {
     grid-row: 3;
     margin: 0;
     margin-bottom: $uds-size-spacing-3;
+    span {
+      margin-left: 0.15em;
+    }
   }
 
   a.btn {
